--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,79 +1,53 @@
+* {
+    box-sizing: border-box;
+}
+html {
+    font-size: 16px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 body {
+    display: grid;
+    grid-template-rows: .25fr 3.5fr .25fr;
+    flex-wrap: wrap;
+    flex-direction: column;
+    min-height: 100vh;
     min-width: 100vw;
     margin: 0;
-    background-color: ;
+    position: relative;
+    background-color: gray;
 }
 header {
-    display: grid;
-    grid-template-areas: 
-        "logo nav"
-        "title title";
-    min-width: 100%;
-    margin: 0 auto;
-}
-nav {
-    grid-area: nav;
     display: flex;
     justify-content: space-between;
-}
-nav h3 {
-    margin: 5px;
-}
-.logo {
-    grid-area: logo;
-    align-self: flex-end;
-    justify-self: flex-start;
-    margin: 0
-    
-}
-.title{
-    grid-area: title;
-    align-self: center;
-    justify-self: center;
-    margin: 20%;
+    max-width: 100%;
+    flex-direction: column;
 }
 img {
-    max-width: 10rem;
+    max-height: 4rem;
+}
+.logo {
+    display: flex;
+    margin: 0 10px;
+    justify-content: center;
+}
+nav {
+    display: flex;
+    gap: 10%;
+    min-width: 500px;
+    justify-content: flex-end;
+    margin-right: 10px;
 }
 main {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    justify-content: center;
-    justify-items: center;
-    /* min-width: 100%; */
-    max-width: 80%;
-    margin: 0 auto;
-    column-gap: 10px;
-}
-section{
-    height: 500px;
-    min-height: fit-content;
-    width: 400px;
-    min-width: 250px;
-    padding: 1.5rem;
-    border-radius: 16px;
-    background-color: rgb(250,250,250);
-    box-shadow: 0 -1rem 2rem #000;
     display: flex;
-    flex-direction: column;
     align-items: center;
     justify-content: center;
-    transition: 0.35s;
+
 }
-@media (max-width: 500px) {
-    main {
-        grid-template-columns: 1fr;
-    }
-    section {
-        transform: scale(.75);
-    }
+footer {
+    position: fixed;
+    bottom: 0;
+    min-width: 100vw;
 }
-/* animations only for hover devices */
-@media (hover:hover) {
-    section:nth-child(odd):hover {
-    transform: translate(50%, -50px) scale(1.5);
-}
-section:nth-child(even):hover {
-    transform: translate(-50%, -50px) scale(1.5);
-}
+details {
+    max-width: 64ch;
 }
