--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,6 +5,7 @@
 html {
     font-size: 16px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    overflow-x: hidden;
 }
 body {
     display: grid;
@@ -13,9 +14,14 @@ body {
     flex-direction: column;
     min-height: 100vh;
     min-width: 100vw;
-    margin: 0;
+    margin: 0 auto;
     position: relative;
-    background-color: gray;
+    background-color: rgba(0, 1, 25, 100);
+    color: white;
+    overflow-x: hidden;
+}
+.home {
+    overflow: hidden;
 }
 header {
     display: flex;
@@ -40,7 +46,7 @@ nav {
 }
 main {
     display: flex;
-    align-items: center;
+    /* align-items: flex-end; */
     justify-content: center;
 
 }
@@ -51,4 +57,36 @@ footer {
 }
 details {
     max-width: 64ch;
+}
+h2 {
+    /* font-family: PlayfairDisplay; */
+    font-weight: lighter;
+}
+.welcome{
+    font-size: 8rem;
+    margin: 0;
+    margin-top: 100px;
+}
+a {
+    color: white;
+}
+.oval {
+    position: absolute;
+    background-color: rgba(227, 0, 26, 50%);
+    height: 200px;
+    width: 200vw;
+    z-index: -10;
+    border-radius: 500px;
+    top: 1vw;
+    left: 10vw;
+}
+.oval2 {
+    position: absolute;
+    background-color: rgba(255, 216, 51, 60%);
+    height: 30vh;
+    width: 200vw;
+    z-index: -10;
+    border-radius: 300px;
+    bottom: 5vw;
+    right: 10vw;
 }
