--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,7 +13,7 @@ body {
     flex-wrap: wrap;
     flex-direction: column;
     min-height: 100vh;
-    min-width: 100vw;
+    max-width: 100vw;
     margin: 0 auto;
     position: relative;
     background-color: rgba(0, 1, 25, 100);
@@ -26,7 +26,7 @@ body {
 header {
     display: flex;
     justify-content: space-between;
-    max-width: 100%;
+    max-width: inherit;
     flex-direction: column;
 }
 img {
