--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,6 +20,9 @@ body {
     color: white;
     overflow-x: hidden;
 }
+p {
+    max-width: 64ch;
+}
 .home {
     overflow-x: hidden;
 }
@@ -91,6 +94,36 @@ a {
     bottom: 5vw;
     right: 10vw;
 }
+
+/* about us page */
+.brothers {
+    min-height: 40rem;
+    width: auto;
+}
+.about-us main section h2{
+    font-size: 4rem;
+    position: absolute;
+    justify-self: center;
+}
+.about-us main{
+    align-items: center;
+    flex-direction: column;
+}
+
+
+/* contact page */
+.contact main {
+    align-items: center;
+    /* flex-direction: column; */
+    gap: 7%;
+}
+.contact main img {
+    position: absolute;
+    min-height: 20rem;
+    z-index: -1;
+    opacity: 50%;
+}
+
 @media (max-width: 500px){
     .welcome{
         font-size: 5rem;
@@ -104,29 +137,10 @@ a {
         justify-content: center;
         margin-right: 0;
     }
-}
-/* about us page */
-.brothers {
-    min-height: 40rem;
-}
-.about-us main section h2{
-    font-size: 4rem;
-    position: absolute;
-    justify-self: center;
-}
-.about-us main section{
-    display: flex;
-}
-
-/* contact page */
-.contact main {
-    align-items: center;
-    /* flex-direction: column; */
-    gap: 7%;
-}
-.contact main img {
-    position: absolute;
-    min-height: 20rem;
-    z-index: -1;
-    opacity: 50%;
+    .about-us main{
+        align-items: flex-start;
+    }
+    .about-us p {
+        max-width: 100vw;
+    }
 }
